# confluence-chatbot

./: .gitignore  README.md  app.py  main.py  pyproject.toml
utils/: config.py  confluence.py  document_loader.py  rag.py
